--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,4 @@
-SPOTIFY_CLIENT_ID=your_spotify_client_id
-SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
-SPOTIFY_REDIRECT_URI=http://localhost:8888/callback
+SEU_CLIENT_ID=
+SEU_CLIENT_SECRET=
+SEU_REDIRECT_URI=http://localhost:8888/callback
+SEU_USER_ID=
